[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hn-sdk"
version = "0.1.0"
description = "A simple Python SDK for the HackerNews API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]
keywords = ["hackernews", "api", "sdk", "hacker-news"]
authors = [{name = "PETER-web-png", email = ""}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/PETER-web-png/hn-sdk"
Source = "https://github.com/PETER-web-png/hn-sdk"
